# Qiskit-NWChem-Driver

./: .gitignore  H2-0.7.yaml  README.md  code_analysis.ipynb  demo_spin_NWchem.py  environment.yml  export_chem_library_yaml.py  note1.ipynb  nwchem2xml.py  nwchem2yaml.py  nwchem_qiskit_driver.ipynb  nwchem_qiskit_driver_batch.ipynb  nwchem_readout.ipynb  output.txt  pyproject.toml  requirements.txt  slow_nwchem.ipynb
notebooks/: energies_h2_atomic.json  energies_h2_atomic_5.json  energies_lih_atomic.json  eri_pair_densities_analysis.ipynb  noise_analysis_quantum_gates.ipynb  nwchem_qiskit_driver.ipynb  nwchem_qiskit_driver_batch.ipynb  nwchem_qiskit_driver_noise.ipynb  nwchem_qiskit_noise_testing.ipynb  results.json  results_PW_H2_HF.json  results_PW_LiH_HF.json  results_covo_H2.json  results_covo_H2_FCI.json  results_covo_H2_fci.json  results_covo_H2_testing.json  results_covo_LiH.json  results_covo_LiH_FCI_18.json  results_covo_LiH_try.json  results_false_pvdz_H2.json  results_false_pvdz_LiH.json  results_false_pvdz_LiH_4.json  results_false_pvtz_H2.json  results_false_pvtz_LiH.json  results_nocovo_H2_FCI.json  results_nocovo_LiH_FCI.json  results_pseudo_LiH.json  results_pvdz_H2.json  results_pvqz_H2.json  results_pvtz_H2.json  results_true_pvdz_H2.json  slow_nwchem.ipynb  slow_nwchem_H2.ipynb  slow_nwchem_LiH.ipynb
qiskit_nature_qe/: nwchem_driver.py  nwchem_wfc.py  qe_driver.py
src/: LiH.cif  aug-cc-pv5z.py  energies_h2_atomic_5.json  energies_h2_atomic_frozen.json  mcscf.py  nwchem_utils.py  pspw_hf_LiH.db  pspw_hf_LiH.zmat  pvdz_lih.py  results_covo_H2.json  (+5 more)
(+1313 files in other folders)
