[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[project]
name = "qiskit_nwchem_driver"
version = "0.0.1"
authors = [
    { name="MQS", email="contact@mqs.dk" },
]
description = "Qiskit Nwchem Driver"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
             "h5py",
             "numpy",
             "pyscf",
             "PyYAML",
             "qiskit",
             "qiskit_algorithms",
             "qiskit_nature",
             "ruamel.base",
             "ruamel_yaml",
             "xmltodict"
]

[project.urls]
"Homepage" = "https://mqs.dk"
